build with babel

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,6 +4,7 @@
         "module": "ESNext",
         "declaration": true,
         "declarationDir": "./lib",
+        "emitDeclarationOnly": true,
         "skipLibCheck": true,
         // "strict": true,
         "allowSyntheticDefaultImports": true,
