--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "build:docs": "webpack --config config/webpack.config.prod.js",
         "version": "git add -A",
         "postversion": "git push && git push --tags",
-        "publish-ci": "npm publish"
+        "publish-ci": "npm publish --access public"
     },
     "repository": {
         "type": "git",
