--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,6 @@
 {
-    "extends": "react-app",
+    "extends": ["react-app", "prettier"],
+    "plugins": ["prettier"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "jsx": true,
