--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "peerDependencies": {
         "@emotion/core": "^10.0.28",
         "@emotion/styled": "^10.0.27",
+        "emotion-theming": "^10.0.27",
         "react": "^16.13.1",
         "react-dom": "^16.13.1"
     },
@@ -76,12 +77,18 @@
         "babel-plugin-emotion": "^10.0.29",
         "emotion-theming": "^10.0.27",
         "eslint": "^6.8.0",
+        "eslint-config-prettier": "^6.10.1",
+        "eslint-config-react-app": "^5.2.1",
+        "eslint-plugin-prettier": "^3.1.2",
         "file-loader": "^6.0.0",
         "fs-extra": "^9.0.0",
         "html-webpack-plugin": "^4.0.3",
+        "husky": "^4.2.5",
         "jest": "^25.1.0",
         "jest-emotion": "^10.0.32",
         "jest-resolve": "^25.1.0",
+        "lint-staged": "^10.1.3",
+        "prettier": "^2.0.4",
         "prism-react-renderer": "^1.0.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
