--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
         "@types/react": "^16.9.25",
         "@types/react-dom": "^16.9.5",
         "@types/react-router-dom": "^5.1.3",
+        "@typescript-eslint/eslint-plugin": "^2.28.0",
+        "@typescript-eslint/parser": "^2.28.0",
         "babel-eslint": "^10.1.0",
         "babel-jest": "^25.1.0",
         "babel-loader": "^8.1.0",
@@ -79,7 +81,12 @@
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.10.1",
         "eslint-config-react-app": "^5.2.1",
+        "eslint-plugin-flowtype": "^4.7.0",
+        "eslint-plugin-import": "^2.20.2",
+        "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-prettier": "^3.1.2",
+        "eslint-plugin-react": "^7.19.0",
+        "eslint-plugin-react-hooks": "^3.0.0",
         "file-loader": "^6.0.0",
         "fs-extra": "^9.0.0",
         "html-webpack-plugin": "^4.0.3",
