--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,7 @@
-root = true
-
-[*]
+[*.{js,jsx,ts,tsx}]
 indent_style = space
-indent_size = 4
-charset = utf-8
+indent_size = 2
+end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
-end_of_line = lf
-# editorconfig-tools is unable to ignore longs strings or urls
 max_line_length = null
