--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-    "printWidth": 110,
-    "singleQuote": true,
-    "trailingComma": "es5",
-    "jsxBracketSameLine": true,
-    "jsxSingleQuote": false
+  "singleQuote": true,
+  "printWidth": 110,
+  "tabWidth": 2,
+  "bracketSpacing": true,
+  "semi": true,
+  "trailingComma": "all"
 }
