--- a/package.json
+++ b/package.json
@@ -1,114 +1,116 @@
 {
-    "name": "neutrino-ui",
-    "version": "0.9.0",
-    "description": "react ui components library",
-    "main": "lib/index.js",
-    "module": "lib/index.js",
-    "types": "lib/index.d.ts",
-    "directories": {
-        "lib": "lib",
-        "test": "__tests__"
-    },
-    "files": [
-        "lib"
-    ],
-    "publishConfig": {
-        "access": "public"
-    },
-    "scripts": {
-        "typecheck": "tsc -p tsconfig.build.json --noEmit",
-        "build": "node scripts/build.js",
-        "compile": "tsc -p tsconfig.build.json",
-        "dev": "webpack-dev-server --inline --color --hot",
-        "build:docs": "webpack --config config/webpack.config.prod.js",
-        "version": "git add -A",
-        "postversion": "git push && git push --tags",
-        "publish-ci": "npm publish --access public"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/DBodrov/neutrino-ui.git"
-    },
-    "keywords": [
-        "neutrino-ui",
-        "react",
-        "ui",
-        "components"
-    ],
-    "author": "D.Bodrov",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/DBodrov/neutrino-ui/issues"
-    },
-    "homepage": "https://neutrino-ui.netlify.app/",
-    "peerDependencies": {
-        "@emotion/core": "^10.0.28",
-        "@emotion/styled": "^10.0.27",
-        "emotion-theming": "^10.0.27",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1"
-    },
-    "devDependencies": {
-        "@babel/cli": "^7.8.4",
-        "@babel/core": "^7.9.6",
-        "@babel/plugin-proposal-class-properties": "^7.8.3",
-        "@babel/plugin-proposal-export-default-from": "^7.8.3",
-        "@babel/plugin-proposal-export-namespace-from": "^7.8.3",
-        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
-        "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/polyfill": "^7.8.7",
-        "@babel/preset-env": "^7.9.6",
-        "@babel/preset-react": "^7.9.1",
-        "@babel/preset-typescript": "^7.9.0",
-        "@emotion/babel-preset-css-prop": "^10.0.27",
-        "@emotion/core": "^10.0.28",
-        "@emotion/styled": "^10.0.27",
-        "@testing-library/jest-dom": "^5.8.0",
-        "@testing-library/react": "^10.0.4",
-        "@testing-library/user-event": "^10.3.4",
-        "@types/jest": "^25.2.3",
-        "@types/node": "^13.13.9",
-        "@types/react": "^16.9.35",
-        "@types/react-dom": "^16.9.8",
-        "@types/react-router-dom": "^5.1.5",
-        "@typescript-eslint/eslint-plugin": "^2.34.0",
-        "@typescript-eslint/parser": "^2.34.0",
-        "babel-eslint": "^10.1.0",
-        "babel-jest": "^25.5.1",
-        "babel-loader": "^8.1.0",
-        "babel-plugin-emotion": "^10.0.33",
-        "emotion-theming": "^10.0.27",
-        "eslint": "^6.8.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-config-react-app": "^5.2.1",
-        "eslint-plugin-flowtype": "^4.7.0",
-        "eslint-plugin-import": "^2.20.2",
-        "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-prettier": "^3.1.3",
-        "eslint-plugin-react": "^7.20.0",
-        "eslint-plugin-react-hooks": "^3.0.0",
-        "file-loader": "^6.0.0",
-        "fs-extra": "^9.0.0",
-        "html-webpack-plugin": "^4.3.0",
-        "husky": "^4.2.5",
-        "jest": "^25.5.4",
-        "jest-emotion": "^10.0.32",
-        "jest-resolve": "^25.5.1",
-        "lint-staged": "^10.2.6",
-        "prettier": "^2.0.5",
-        "prism-react-renderer": "^1.1.1",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-router-dom": "^5.2.0",
-        "typescript": "^3.9.3",
-        "url-loader": "^4.1.0",
-        "webpack": "^4.43.0",
-        "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.11.0",
-        "webpack-merge": "^4.2.2"
-    },
-    "dependencies": {
-        "react-spring": "^8.0.27"
-    }
+  "name": "neutrino-ui",
+  "version": "0.9.0",
+  "description": "react ui components library",
+  "main": "lib/index.js",
+  "module": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "directories": {
+    "lib": "lib",
+    "test": "__tests__"
+  },
+  "files": [
+    "lib"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "scripts": {
+    "typecheck": "tsc -p tsconfig.build.json --noEmit",
+    "build": "node scripts/build.js",
+    "compile": "tsc -p tsconfig.build.json",
+    "start": "webpack-dev-server --inline --color --hot",
+    "build:docs": "webpack --config config/webpack.config.prod.js",
+    "version": "git add -A",
+    "postversion": "git push && git push --tags",
+    "publish-ci": "npm publish --access public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DBodrov/neutrino-ui.git"
+  },
+  "keywords": [
+    "neutrino-ui",
+    "react",
+    "ui",
+    "components"
+  ],
+  "author": "D.Bodrov",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/DBodrov/neutrino-ui/issues"
+  },
+  "homepage": "https://neutrino-ui.netlify.app/",
+  "peerDependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
+    "emotion-theming": "^10.0.27",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-export-default-from": "^7.8.3",
+    "@babel/plugin-proposal-export-namespace-from": "^7.8.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.1",
+    "@babel/preset-typescript": "^7.9.0",
+    "@emotion/babel-preset-css-prop": "^10.0.27",
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.1",
+    "@testing-library/jest-dom": "^5.8.0",
+    "@testing-library/react": "^10.0.4",
+    "@testing-library/user-event": "^10.3.4",
+    "@types/jest": "^25.2.3",
+    "@types/node": "^13.13.9",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^25.5.1",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-emotion": "^10.0.33",
+    "emotion-theming": "^10.0.27",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-flowtype": "^4.7.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
+    "file-loader": "^6.0.0",
+    "fs-extra": "^9.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "husky": "^4.2.5",
+    "jest": "^25.5.4",
+    "jest-emotion": "^10.0.32",
+    "jest-resolve": "^25.5.1",
+    "lint-staged": "^10.2.6",
+    "prettier": "^2.0.5",
+    "prism-react-renderer": "^1.1.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-refresh": "^0.8.3",
+    "react-router-dom": "^5.2.0",
+    "typescript": "^3.9.3",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^4.2.2"
+  },
+  "dependencies": {
+    "react-spring": "^8.0.27"
+  }
 }
