--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-emotion": "^10.0.33",
+    "copy-webpack-plugin": "^6.2.1",
     "emotion-theming": "^10.0.27",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
