--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "lint:site": "eslint site/**/*.{ts,tsx}",
     "lint:site:fix": "eslint site/**/*.{ts,tsx} --fix",
     "lint:fix": "eslint src/**/*.{ts,tsx} --fix",
+    "tdd": "jest --config config/jest.config.js --watchAll",
+    "test": "jest --config config/jest.config.js",
     "build": "node scripts/build.js",
     "compile": "tsc -p tsconfig.build.json",
     "start": "webpack serve",
@@ -47,41 +49,46 @@
   },
   "homepage": "https://neutrino-ui.netlify.app/",
   "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
+    "@babel/cli": "^7.12.8",
+    "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-export-default-from": "^7.12.1",
     "@babel/plugin-proposal-export-namespace-from": "^7.12.1",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
-    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-spread": "^7.12.1",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.5",
-    "@babel/preset-typescript": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
+    "@babel/preset-typescript": "^7.12.7",
     "@emotion/babel-plugin": "^11.0.0",
     "@emotion/babel-preset-css-prop": "^11.0.0",
     "@emotion/core": "^11.0.0",
     "@emotion/eslint-plugin": "^11.0.0",
+    "@emotion/jest": "^11.1.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.2",
+    "@testing-library/cypress": "^7.0.2",
+    "@testing-library/dom": "^7.28.1",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.7",
-    "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.9",
+    "@types/node": "^14.14.10",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.6",
-    "@typescript-eslint/eslint-plugin": "^4.7.0",
-    "@typescript-eslint/parser": "^4.7.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.1",
     "babel-plugin-emotion": "^11.0.0",
-    "copy-webpack-plugin": "^6.3.0",
+    "copy-webpack-plugin": "^6.3.2",
     "core-js": "^3.7.0",
+    "cypress": "^6.1.0",
     "emotion-theming": "^11.0.0",
-    "eslint": "^7.13.0",
+    "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
@@ -92,26 +99,32 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
     "fs-extra": "^9.0.1",
-    "html-webpack-plugin": "^4.5.0",
+    "html-webpack-plugin": "^5.0.0-alpha.14",
     "husky": "^4.3.0",
-    "lint-staged": "^10.5.1",
-    "prettier": "^2.1.2",
+    "jest": "^26.6.3",
+    "jest-emotion": "^11.0.0",
+    "lint-staged": "^10.5.2",
+    "msw": "^0.24.1",
+    "prettier": "^2.2.0",
     "prism-react-renderer": "^1.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-refresh": "^0.9.0",
     "react-router-dom": "^5.2.0",
-    "typescript": "^4.0.5",
+    "react-scripts": "^4.0.1",
+    "start-server-and-test": "^1.11.6",
+    "typescript": "^4.1.2",
     "url-loader": "^4.1.1",
-    "webpack": "^5.4.0",
+    "webpack": "^5.6.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.4.0"
+    "webpack-merge": "^5.4.0",
+    "whatwg-fetch": "^3.5.0"
   },
   "dependencies": {
-    "react-spring": "^8.0.27",
-    "@emotion/react": "^11.0.0",
-    "@emotion/styled": "^11.0.0"
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11.0.0",
+    "react-spring": "^8.0.27"
   },
   "peerDependencies": {
     "react": "^17.0.1",
