--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "build:docs": "webpack --config config/webpack.config.prod.js",
     "version": "git add -A",
     "postversion": "git push && git push --tags",
-    "publish-ci": "npm publish --access public"
+    "publish-ci": "npm publish --access public",
+    "cypress": "cypress open",
+    "cypress:headless": "cypress run --browser chrome --headless",
+    "test:e2e": "start-server-and-test start 5000 cypress",
+    "test:e2e:ci": "start-server-and-test start 5000 cypress:headless"
   },
   "repository": {
     "type": "git",
@@ -65,6 +69,7 @@
     "@emotion/core": "^11.0.0",
     "@emotion/eslint-plugin": "^11.0.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@testing-library/cypress": "^7.0.2",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
@@ -80,6 +85,7 @@
     "babel-plugin-emotion": "^11.0.0",
     "copy-webpack-plugin": "^6.3.0",
     "core-js": "^3.7.0",
+    "cypress": "^6.1.0",
     "emotion-theming": "^11.0.0",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
@@ -101,6 +107,7 @@
     "react-dom": "^17.0.1",
     "react-refresh": "^0.9.0",
     "react-router-dom": "^5.2.0",
+    "start-server-and-test": "^1.11.6",
     "typescript": "^4.0.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.4.0",
