fix webpack docs config

--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "build": "node scripts/build.js",
     "compile": "tsc -p tsconfig.build.json",
     "start": "webpack serve",
-    "dev": "webpack serve",
     "build:docs": "webpack --config config/webpack.config.prod.js",
     "version": "git add -A",
     "postversion": "git push && git push --tags",
@@ -115,6 +114,7 @@
     "react-refresh": "^0.9.0",
     "react-router-dom": "^5.2.0",
     "start-server-and-test": "^1.11.6",
+    "terser-webpack-plugin": "^5.1.1",
     "typescript": "^4.0.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.11.0",
