--- a/package.json
+++ b/package.json
@@ -52,81 +52,81 @@
   },
   "homepage": "https://neutrino-ui.netlify.app/",
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-export-default-from": "^7.12.1",
-    "@babel/plugin-proposal-export-namespace-from": "^7.12.1",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
-    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.14",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-export-default-from": "^7.12.13",
+    "@babel/plugin-proposal-export-namespace-from": "^7.12.13",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.13.8",
+    "@babel/plugin-proposal-optional-chaining": "^7.13.12",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-spread": "^7.12.1",
+    "@babel/plugin-transform-spread": "^7.13.0",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/preset-typescript": "^7.12.7",
-    "@emotion/babel-plugin": "^11.1.2",
-    "@emotion/babel-preset-css-prop": "^11.0.0",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/preset-typescript": "^7.13.0",
+    "@emotion/babel-plugin": "^11.2.0",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
     "@emotion/core": "^11.0.0",
-    "@emotion/eslint-plugin": "^11.0.0",
-    "@emotion/jest": "^11.1.0",
+    "@emotion/eslint-plugin": "^11.2.0",
+    "@emotion/jest": "^11.2.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "@testing-library/cypress": "^7.0.2",
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.2",
-    "@testing-library/user-event": "^12.2.2",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.7",
-    "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.9",
-    "@types/react-router-dom": "^5.1.6",
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
-    "@typescript-eslint/parser": "^4.11.0",
+    "@testing-library/cypress": "^7.0.5",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.1",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-router-dom": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-emotion": "^11.0.0",
-    "copy-webpack-plugin": "^6.3.0",
-    "core-js": "^3.7.0",
-    "cypress": "^6.3.0",
+    "copy-webpack-plugin": "^8.1.0",
+    "core-js": "^3.9.1",
+    "cypress": "^6.8.0",
     "emotion-theming": "^11.0.0",
-    "eslint": "^7.16.0",
-    "eslint-config-prettier": "^7.1.0",
+    "eslint": "^7.23.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-flowtype": "^5.4.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
-    "fs-extra": "^9.0.1",
-    "html-webpack-plugin": "^5.0.0-alpha.14",
-    "husky": "^4.3.6",
+    "fs-extra": "^9.1.0",
+    "html-webpack-plugin": "^5.3.1",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
     "jest-emotion": "^11.0.0",
-    "lint-staged": "^10.5.3",
-    "msw": "^0.24.3",
+    "lint-staged": "^10.5.4",
+    "msw": "^0.28.0",
     "prettier": "^2.2.1",
-    "prism-react-renderer": "^1.1.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "prism-react-renderer": "^1.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-refresh": "^0.9.0",
     "react-router-dom": "^5.2.0",
-    "start-server-and-test": "^1.11.6",
+    "start-server-and-test": "^1.12.1",
     "terser-webpack-plugin": "^5.1.1",
-    "typescript": "^4.0.5",
+    "typescript": "^4.2.3",
     "url-loader": "^4.1.1",
-    "webpack": "^5.11.0",
-    "webpack-cli": "^4.3.0",
-    "webpack-dev-server": "^3.11.0",
+    "webpack": "^5.28.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3",
-    "whatwg-fetch": "^3.5.0"
+    "whatwg-fetch": "^3.6.2"
   },
   "dependencies": {
-    "@emotion/react": "^11.1.4",
-    "@emotion/styled": "^11.0.0",
-    "react-spring": "^8.0.27"
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "react-spring": "^9.0.0"
   },
   "peerDependencies": {
     "react": "^17.0.1",
