--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "core-js": "^3.9.1",
     "cypress": "^6.8.0",
     "emotion-theming": "^11.0.0",
+    "esbuild": "^0.11.20",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-react-app": "^6.0.0",
